# Hardcoded...ToSelf-Destruct

./: .gitignore  CMakeLists.txt  README.md
headers/: Animator.hpp  Colider.hpp  Level.hpp  ParseJson.hpp  Player.hpp  TextScroller.hpp
resources/: back-button.json  button.json  butts.json  continue.aseprite  continue.json  digits.json  door.json  exit-button.json  info-button.json  mmenu.json  player.json  plus10.json  plus5.json  restart.json  resume.json  start-button.json  transition.json
resources/level1/: bg1.json  tip1.aseprite  tip2.aseprite  tip3.aseprite  tip4.aseprite
resources/level2/: lava.aseprite  lava.json
resources/level4/: bg4.aseprite  lava.aseprite  lava.json
resources/level5/: bg4.aseprite  bg5.aseprite
resources/levelEnd/: bgEnd.aseprite
resources/raw/: Self-destructination.ase  backt-button.aseprite  beaten.aseprite  bg1.aseprite  bg2.aseprite  bg3.aseprite  block1.aseprite  block2.aseprite  button.aseprite  butts.aseprite  digits.aseprite  door.aseprite  exit-button.aseprite  footer.aseprite  info-button.aseprite  info-screen.aseprite  intro-screen.aseprite  mmenu.aseprite  pause.aseprite  plus10.aseprite  plus5.aseprite  restart.aseprite  resume.aseprite  start-button.aseprite  test.aseprite  title_screen.aseprite  transition.aseprite
source/: main.cpp
